--- a/common.css
+++ b/common.css
@@ -530,6 +530,7 @@ a {
     height: 100%;
     border: 0;
 }
+
 @media (max-width: 992px) {
   .container { padding: 0 1.5rem; }
   .header-inner .navbar {
@@ -539,10 +540,16 @@ a {
     display: flex;
   }
 
+  .header-left {
+    max-width: 100%;
+    box-sizing: border-box;
+  }
+
   .logo-container .logo-img {
     height: 40px;
     min-height: 40px;
     width: auto;
+    max-width: 100%;
   }
 
   .logo-container .logo-link,
@@ -624,6 +631,5 @@ a {
     background-color: #005f6b;
     transform: translateY(-2px);
     box-shadow: 0 6px 12px rgba(0,0,0,0.15);
-}
 }
 }
